--- a/app/src/main/res/layout/activity_item_edit.xml
+++ b/app/src/main/res/layout/activity_item_edit.xml
@@ -11,39 +11,39 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_image_black_24dp"
             android:layout_weight="7"
+            android:clickable="true"
 
     />
-    <TextView
+    <android.support.design.widget.TextInputEditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/itemName"
+            android:id="@+id/itemNameEdit"
             android:text="Name"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="10sp"
 
     />
-    <TextView
+    <android.support.design.widget.TextInputEditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/itemType"
+            android:id="@+id/itemTypeEdit"
             android:text="Type"
             android:textSize="15sp"
             android:layout_marginTop="10sp"
     />
-    <TextView
+    <android.support.design.widget.TextInputEditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/itemRadius"
+            android:id="@+id/itemRadiusEdit"
             android:text="Radius"
             android:textSize="15sp"
             android:layout_marginTop="10sp"
 
     />
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
-        <Button android:id="@+id/editButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Edit"/>
-        <Button android:id="@+id/deleteButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Delete"/>
-    </LinearLayout>
+        <Button android:id="@+id/saveButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Save"/>
+           </LinearLayout>
 
 
 
