--- a/app/src/main/res/layout/activity_item_edit.xml
+++ b/app/src/main/res/layout/activity_item_edit.xml
@@ -43,6 +43,7 @@
     />
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
         <Button android:id="@+id/saveButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Save"/>
+        <Button android:id="@+id/takePhoto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Take a photo"/>
            </LinearLayout>
 
 
