--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:padding="4dp"
             android:background="@android:color/darker_gray"
             android:scrollbars="vertical"
+            android:layout_below="@id/toolbar"
 
     />
 </RelativeLayout>
